--- a/css/style.css
+++ b/css/style.css
@@ -1333,6 +1333,33 @@ main {
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
+
+  animation-duration: 2s;
+  animation-name: slidein;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes slidein {
+  0% {
+    left: 42%;
+  }
+
+  25% {
+    left: 50%;
+  }
+
+  50% {
+    left: 58%;
+  }
+
+  75% {
+    left: 50%;
+  }
+
+  100% {
+    left: 42%;
+  }
 }
 
 
